tests/basic/bad/test53.pepa
% File: tests/bad/test53.pepa
% Syntax error, missing semicolon between declarations
P = (a, r).P
Q = (b, s).Q;
(P <> Q)
